tests/negative/typecheck/args_named_not_annot.orng
// args_named_not_annot.orng:13:9: error: expected an inferred member, got `[`
//     f(y[2] = 5, y[2] = 5)
//        ^
// args_named_not_annot.orng:13:13: error: expected a value of type `Int`, got a value of type `()`
//     f(y[2] = 5, y[2] = 5)
//            ^
// args_named_not_annot.orng:13:23: error: expected a value of type `Int`, got a value of type `()`
//     f(y[2] = 5, y[2] = 5)
//                      ^
// 
fn main() -> Int {
    let mut y: [2]Int
    f(y[2] = 5, y[2] = 5)
    0
}

fn f(x: Int, y: Int) -> Int { x + y }